
# 添加 logger 测试目录
# add_subdirectory(logger_test)
# add_subdirectory(thread_test)
# add_subdirectory(threadpool_test)
# add_subdirectory(condition_test)
# add_subdirectory(inetaddress_test)
# add_subdirectory(eventloop_test)
add_subdirectory(tcpserver_test)
add_subdirectory(tcpclient_test)
# add_subdirectory(eventloopthread_test)
